--- a/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_02.ipynb
+++ b/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_02.ipynb
@@ -77,30 +77,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T03:37:46.217600Z",
+     "start_time": "2024-12-17T03:37:46.209863Z"
+    }
+   },
    "source": [
-    "# import pandas"
-   ]
+    "# import pandas\n",
+    "import pandas as pd"
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T03:37:51.463886Z",
+     "start_time": "2024-12-17T03:37:51.457885Z"
+    }
+   },
    "source": [
-    "# import the dataset"
-   ]
+    "# import the dataset\n",
+    "cars = pd.read_csv('cars.csv')"
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T03:38:27.042958Z",
+     "start_time": "2024-12-17T03:38:27.032881Z"
+    }
+   },
    "source": [
-    "# inspect"
-   ]
+    "# inspect\n",
+    "cars\n"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0    18.0          8         307.0       130.0    3504          12.0   \n",
+       "1    15.0          8         350.0       165.0    3693          11.5   \n",
+       "2    18.0          8         318.0       150.0    3436          11.0   \n",
+       "3    16.0          8         304.0       150.0    3433          12.0   \n",
+       "4    17.0          8         302.0       140.0    3449          10.5   \n",
+       "..    ...        ...           ...         ...     ...           ...   \n",
+       "393  27.0          4         140.0        86.0    2790          15.6   \n",
+       "394  44.0          4          97.0        52.0    2130          24.6   \n",
+       "395  32.0          4         135.0        84.0    2295          11.6   \n",
+       "396  28.0          4         120.0        79.0    2625          18.6   \n",
+       "397  31.0          4         119.0        82.0    2720          19.4   \n",
+       "\n",
+       "     model_year  origin                       name  \n",
+       "0            70     usa  chevrolet chevelle malibu  \n",
+       "1            70     usa          buick skylark 320  \n",
+       "2            70     usa         plymouth satellite  \n",
+       "3            70     usa              amc rebel sst  \n",
+       "4            70     usa                ford torino  \n",
+       "..          ...     ...                        ...  \n",
+       "393          82     usa            ford mustang gl  \n",
+       "394          82  europe                  vw pickup  \n",
+       "395          82     usa              dodge rampage  \n",
+       "396          82     usa                ford ranger  \n",
+       "397          82     usa             chevrolet s-10  \n",
+       "\n",
+       "[398 rows x 9 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>2790</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford mustang gl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2130</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>vw pickup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>2295</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>dodge rampage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>2625</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford ranger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>2720</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet s-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>398 rows × 9 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -111,12 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-17T05:09:37.655258Z",
+     "start_time": "2024-12-17T05:09:37.637369Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": "cars.name.loc[393]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ford mustang gl'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -134,12 +372,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-17T05:10:56.062726Z",
+     "start_time": "2024-12-17T05:10:56.055900Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": "cars.loc[393, \"name\"]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ford mustang gl'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -150,12 +403,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-17T05:12:31.982906Z",
+     "start_time": "2024-12-17T05:12:31.977001Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": "cars.iloc[100]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg                      18.0\n",
+       "cylinders                   6\n",
+       "displacement            250.0\n",
+       "horsepower               88.0\n",
+       "weight                   3021\n",
+       "acceleration             16.5\n",
+       "model_year                 73\n",
+       "origin                    usa\n",
+       "name            ford maverick\n",
+       "Name: 100, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -174,10 +451,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T05:12:40.780224Z",
+     "start_time": "2024-12-17T05:12:40.774101Z"
+    }
+   },
+   "source": "cars.iloc[200]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg                          18.0\n",
+       "cylinders                       6\n",
+       "displacement                250.0\n",
+       "horsepower                   78.0\n",
+       "weight                       3574\n",
+       "acceleration                 21.0\n",
+       "model_year                     76\n",
+       "origin                        usa\n",
+       "name            ford granada ghia\n",
+       "Name: 200, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -196,12 +498,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cars.iloc[---:, [---, ---, ---, ---]]"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T06:24:03.651172Z",
+     "start_time": "2024-12-17T06:24:03.641546Z"
+    }
+   },
+   "source": "cars.iloc[:-10, [0, 3, 7, 8]]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      mpg  horsepower origin                               name\n",
+       "0    18.0       130.0    usa          chevrolet chevelle malibu\n",
+       "1    15.0       165.0    usa                  buick skylark 320\n",
+       "2    18.0       150.0    usa                 plymouth satellite\n",
+       "3    16.0       150.0    usa                      amc rebel sst\n",
+       "4    17.0       140.0    usa                        ford torino\n",
+       "..    ...         ...    ...                                ...\n",
+       "383  38.0        67.0  japan                        honda civic\n",
+       "384  32.0        67.0  japan                 honda civic (auto)\n",
+       "385  38.0        67.0  japan                      datsun 310 gx\n",
+       "386  25.0       110.0    usa              buick century limited\n",
+       "387  38.0        85.0    usa  oldsmobile cutlass ciera (diesel)\n",
+       "\n",
+       "[388 rows x 4 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>honda civic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>honda civic (auto)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>datsun 310 gx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick century limited</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>oldsmobile cutlass ciera (diesel)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>388 rows × 4 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
