--- a/Pandas/Kaggle/3-summary functions and maps.ipynb
+++ b/Pandas/Kaggle/3-summary functions and maps.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T14:29:12.527966Z",
-     "start_time": "2024-12-16T14:29:12.501985Z"
+     "end_time": "2024-12-21T05:39:44.703782Z",
+     "start_time": "2024-12-21T05:39:44.679104Z"
     }
    },
    "cell_type": "code",
@@ -273,18 +273,18 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T15:15:33.017767Z",
-     "start_time": "2024-12-16T15:15:33.003252Z"
+     "end_time": "2024-12-21T05:40:26.637198Z",
+     "start_time": "2024-12-21T05:40:26.626881Z"
     }
    },
    "cell_type": "code",
@@ -674,18 +674,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T15:23:11.647687Z",
-     "start_time": "2024-12-16T15:23:11.636716Z"
+     "end_time": "2024-12-21T05:39:12.463328Z",
+     "start_time": "2024-12-21T05:39:12.456693Z"
     }
    },
    "cell_type": "code",
@@ -817,12 +817,12 @@
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -1920,41 +1920,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:52:46.366573Z",
-     "start_time": "2024-12-16T17:52:46.345577Z"
+     "end_time": "2024-12-21T05:31:02.785630Z",
+     "start_time": "2024-12-21T05:31:02.625790Z"
     }
    },
    "cell_type": "code",
    "source": [
     "reviews_num_helpful_mean = reviews[\"Reviews Num Helpful\"].mean()\n",
-    "reviews[\"Reviews Num Helpful\"] - reviews_num_helpful_mean"
+    "test = reviews[\"Reviews Num Helpful\"] - reviews_num_helpful_mean\n",
+    "test"
    ],
    "id": "7f18f46f86189152",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Sl.No.\n",
-       "1      -0.282748\n",
-       "2            NaN\n",
-       "3            NaN\n",
-       "4            NaN\n",
-       "5      -0.282748\n",
-       "          ...   \n",
-       "2886         NaN\n",
-       "2887         NaN\n",
-       "2888         NaN\n",
-       "2889         NaN\n",
-       "2890         NaN\n",
-       "Name: Reviews Num Helpful, Length: 2890, dtype: float64"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'reviews' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m reviews_num_helpful_mean \u001B[38;5;241m=\u001B[39m \u001B[43mreviews\u001B[49m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mReviews Num Helpful\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39mmean()\n\u001B[0;32m      2\u001B[0m test \u001B[38;5;241m=\u001B[39m reviews[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mReviews Num Helpful\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m-\u001B[39m reviews_num_helpful_mean\n\u001B[0;32m      3\u001B[0m test\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'reviews' is not defined"
+     ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 1
   },
   {
    "metadata": {
